--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ Hello there, awesome person!Hello there, awesome person!
     <title>I am a title!</title>
 </head>
   <body>
-    Hello there, awesome person! 
+<h1>I'm a header 1!</h1>
+      Hello there, awesome person! 
   </body>
 </html>
